--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Build command line app
-      run: dotnet build Transfer.App --configuration Release
+      run: dotnet build src/Transfer.App --configuration Release
