--- a/src/Transfer.Datasource/Transfer.Datasource.csproj
+++ b/src/Transfer.Datasource/Transfer.Datasource.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <AnalysisLevel>latest</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
