--- a/src/Transfer.App/Transfer.App.csproj
+++ b/src/Transfer.App/Transfer.App.csproj
@@ -2,8 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AnalysisLevel>latest</AnalysisLevel>
+    <TargetFramework>net5.0</TargetFramework>
     <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
