--- a/src/Transfer.Datasource/Transfer.Datasource.csproj
+++ b/src/Transfer.Datasource/Transfer.Datasource.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <AnalysisLevel>latest</AnalysisLevel>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
